2004-02-11  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-01-25  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #132213

	* libgda/gda-client.c (gda_client_open_connection): make sure we
	don't share connections opened with the DONT_SHARE flag.

2004-01-22  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #132152

	* libgda/gda-client.c (gda_client_find_connection): compare
	get_dsn() to name, rather than cnc_string.

2004-01-16  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0.3

2004-01-15  Nikolai Weibull <ruby-gnome2-devel-en-list@pcppopper.org>

	* providers/sqlite/gda-sqlite-provider.c
	(gda_sqlite_provider_open_connection): set the object's private data
	before executing any command.

2004-01-03 Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-util.c (gda_file_save): added O_TRUNC flag.

2003-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-command.c (gda_command_copy): dont use C99.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_data_source_list): fixed
	documentation typo.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-error.[ch] (gda_error_get_number): removed 'const' from
	function's return type.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128933

	* libgda/gda-log.[ch] (gda_log_clean_*): removed unimplemented
	functions.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128929

	* libgda/gda-client.h: added missing space in function prototype
	that confuses pygtk's h2def.py.

2003-11-30  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-data-model.c:
	(gda_data_model_foreach): backported from HEAD.

2003-11-30  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-parameter.c (gda_parameter_list_clear):
	Parameters were not removed from the hash table (just freed).

2003-11-30  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0,2

2003-11-28  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
